--- a/pom.xml
+++ b/pom.xml
@@ -46,6 +46,14 @@
             <artifactId>cucumber-testng</artifactId>
             <version>6.9.0</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/io.cucumber/cucumber-picocontainer -->
+        <dependency>
+            <groupId>io.cucumber</groupId>
+            <artifactId>cucumber-picocontainer</artifactId>
+            <version>6.9.1</version>
+            <scope>test</scope>
+        </dependency>
+
     </dependencies>
     <build>
         <!-- Interacting with resources folder -->
