--- a/pom.xml
+++ b/pom.xml
@@ -72,6 +72,11 @@
             <artifactId>log4j-api</artifactId>
             <version>2.13.3</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-core</artifactId>
+            <version>2.13.3</version>
+        </dependency>
 
     </dependencies>
     <build>
@@ -82,6 +87,7 @@
                 <filtering>true</filtering>
             </resource>
         </resources>
+        <!--Maven compiler and surefire plugins -->
         <pluginManagement>
             <plugins>
                 <plugin>
@@ -115,6 +121,7 @@
                 </plugin>
             </plugins>
         </pluginManagement>
+        <!--Maven cucumber reporting plugin -->
         <plugins>
         <plugin>
             <groupId>net.masterthought</groupId>
